Closed
Bug 1343019
Opened 8 years ago
Closed 8 years ago
Update webrender to 178a65d098afcda7de0298d80d423bc80c6426ba or newer
Categories
(Core :: Graphics: WebRender, defect)
Core
Graphics: WebRender
Tracking
()
RESOLVED
FIXED
mozilla55
People
(Reporter: kats, Assigned: kats)
References
Details
(Whiteboard: [gfx-noted])
Attachments
(1 file)
3.73 KB,
patch
|
kats
:
review+
|
Details | Diff | Splinter Review |
+++ This bug was initially created as a clone of Bug #1341968 +++
I'm filing this as a placeholder bug for the next webrender update. I may be running a cron script [1] that does try pushes with webrender update attempts, so that we can track build/test breakages introduced by webrender on a rolling basis. This bug will hold the try push links as well as dependencies filed for those breakages, so that we have a better idea going into the update of what needs fixing. I might abort the cron job because once things get too far out of sync it's hard to fully automate fixing all the breakages.
When we are ready to actually land the update, we can rename this bug and use it for the update, and then file a new bug for the next "future update".
[1] https://github.com/staktrace/moz-scripts/blob/master/try-latest-webrender.sh
Assignee | ||
Comment 1•8 years ago
|
||
WR @ bc312e71620f8b28d1a061c0af9abc28f4c4805e
https://treeherder.mozilla.org/#/jobs?repo=try&revision=ce3276eff9f070eccfffec7b20f979ded584eb08
Lots of reftest failures. Things were good in 501e3d79c8a3019762bd8bd2d00eecf7811a84de, so one of these changes is responsible:
bc312e7 Auto merge of #938 - rlhunt:update-readme, r=glennw
ca7a0fe Update documentation
235cdd3 Auto merge of #922 - mrobinson:coordinate-system, r=glennw
63937a6 Auto merge of #932 - nox:dwrote, r=glennw
1c4e4fd Auto merge of #931 - glennw:page-zoom, r=pcwalton
0bc129c Auto merge of #928 - changm:font, r=glennw
bcc5075 Only gamma correct for non-mono windows fonts
5ba91ed Switch back to dwrote 0.2
058e6a0 Have ClipScrollTree use reference frame relative coordinates
92be1b5 Implement support for page zoom.
Based on the reftest analyzer view of things I'm guessing it's related to zoom or clipping, so 92be1b5 or 058e6a0 are the likely culprits. I'll bisect.
Assignee | ||
Comment 2•8 years ago
|
||
1c4e4fd is green: https://treeherder.mozilla.org/#/jobs?repo=try&revision=1f297f70328f2ba86bc0e2ec503fbfa96d9a8067
This narrows the range to:
bc312e7 Auto merge of #938 - rlhunt:update-readme, r=glennw
ca7a0fe Update documentation
235cdd3 Auto merge of #922 - mrobinson:coordinate-system, r=glennw
63937a6 Auto merge of #932 - nox:dwrote, r=glennw
5ba91ed Switch back to dwrote 0.2
058e6a0 Have ClipScrollTree use reference frame relative coordinates
Assignee | ||
Comment 3•8 years ago
|
||
058e6a0 is orange: https://treeherder.mozilla.org/#/jobs?repo=try&revision=212fafaae2d616ed5d00e5fd42198d1106d944e9
This narrows the range to:
058e6a0 Have ClipScrollTree use reference frame relative coordinates
Assignee | ||
Updated•8 years ago
|
Assignee | ||
Comment 4•8 years ago
|
||
WR @ a7ed16132f7988a192d8d7fd87318272c5518a65
https://treeherder.mozilla.org/#/jobs?repo=try&revision=bf37d390487b6786621b464e77165e30f23c3408
In addition to the mask-related failures above, there are some UNEXPECTED-PASS results that look related to mix-blend-mode.
Assignee | ||
Comment 5•8 years ago
|
||
mrobinson posted a patch to https://github.com/servo/webrender/pull/944
Try push with that patch: https://treeherder.mozilla.org/#/jobs?repo=try&revision=f01f86bc35dfeb3267437fe1969595671da6a3a1
Shows the mask-related failures are fixed, now we just have the UNEXPECTED-PASS results from mix-blend mode.
See Also: → https://github.com/servo/webrender/pull/944
Assignee | ||
Comment 6•8 years ago
|
||
WR @ 7749973fc9d818de8a346cfa13c752a50cc4590d
https://treeherder.mozilla.org/#/jobs?repo=try&revision=86ce0f56d0435de020754d99b7988627edd30ae2
No new errors beyond what I mentioned above.
Assignee | ||
Comment 7•8 years ago
|
||
WR @ e9f0f51151454278e804e9edaefc19ad666ca36f
https://treeherder.mozilla.org/#/jobs?repo=try&revision=16369f1284de73574c194273f07a3431cf2003a5
Busted, looks like it needs fixes to webrender_bindings.
Assignee | ||
Comment 8•8 years ago
|
||
WR @ e9f0f51151454278e804e9edaefc19ad666ca36f
https://treeherder.mozilla.org/#/jobs?repo=try&revision=f5be908d61311fcc271d499996d65799db88b0fd
With the fixes to webrender_bindings it's looking green. Might be a good time to land this merge.
Assignee | ||
Comment 9•8 years ago
|
||
WR @ 033630d26b07daeafdc759c89c1b9c6c3188321f
https://treeherder.mozilla.org/#/jobs?repo=try&revision=88010ef8aa0b2e9bc6dd048092947b6755ad2b21
Busted. Glenn added a new size parameter to Renderer::new [1] which we're not providing, and might require a lot of plumbing to hook up. And it's used for overscroll!? :(
[1] https://github.com/servo/webrender/commit/033630d26b07daeafdc759c89c1b9c6c3188321f#diff-f5062b694b9fe53fc1757ed483d577d9R512
Assignee | ||
Comment 10•8 years ago
|
||
https://treeherder.mozilla.org/#/jobs?repo=try&revision=c78047ff3bce4d31afe331b05449051e118b814f
Here's one with the necessary plumbing to fix the build bustage. We might as well get this landed, I'll put patches up for review shortly.
Assignee | ||
Comment 11•8 years ago
|
||
... unfortunately there are reftest failures a-plenty, so we'll have to fix those first.
Assignee | ||
Comment 12•8 years ago
|
||
I think the reftest failures were because I screwed up the plumbing fix. I have a new try push going at https://treeherder.mozilla.org/#/jobs?repo=try&revision=72018497c5b5604bb17119602865935bd077f331 which should be good.
Assignee | ||
Comment 13•8 years ago
|
||
Still failing. It is ensaddening. I'll deal with it on Monday.
Updated•8 years ago
|
Whiteboard: [gfx-noted]
Comment 14•8 years ago
|
||
Attachment #8844192 -
Flags: review?(bugmail)
Assignee | ||
Comment 15•8 years ago
|
||
Try push including Jeff's patch above: https://treeherder.mozilla.org/#/jobs?repo=try&revision=25fefb3727904b9899431a38c5a9c77ee5abb1d0
Assignee | ||
Comment 16•8 years ago
|
||
The try push is looking greener, however there's an R4 failure that looks like it might be from mrobinson's latest patch (3662aebbd9c8be8acd095f8bfc38f1bb357d4683). I also kicked off a try push [1] using the slightly older 178a65d098afcda7de0298d80d423bc80c6426ba which excludes mrobinson's patch but still includes jeff's patch. If that doesn't have the R4 failures I'd rather update to that, but if they both have R4 failures I'll just update to the newer one.
[1] https://treeherder.mozilla.org/#/jobs?repo=try&revision=ae9ccec0d5b42210e17dda7a96c503cc182a8f4f
Summary: Future webrender update bug → Update webrender to 178a65d098afcda7de0298d80d423bc80c6426ba or newer
Assignee | ||
Comment 17•8 years ago
|
||
Comment on attachment 8844192 [details] [diff] [review]
Call set_window_parameters as appropriate
Review of attachment 8844192 [details] [diff] [review]:
-----------------------------------------------------------------
(Also for the record jeff gave r+ on IRC for the other patches in the try pushes above, which is what I plan on landing)
Attachment #8844192 -
Flags: review?(bugmail) → review+
Assignee | ||
Updated•8 years ago
|
Assignee: nobody → bugmail
Comment 18•8 years ago
|
||
Pushed by kgupta@mozilla.com:
https://hg.mozilla.org/projects/graphics/rev/4044ae77bb4d
Update webrender to cset 178a65d098afcda7de0298d80d423bc80c6426ba. r=jrmuizel
https://hg.mozilla.org/projects/graphics/rev/528e22122039
Call set_window_parameters as appropriate. r=kats
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Assignee | ||
Comment 19•8 years ago
|
||
https://hg.mozilla.org/mozilla-central/rev/4044ae77bb4d
https://hg.mozilla.org/mozilla-central/rev/528e22122039
Target Milestone: --- → mozilla55
You need to log in
before you can comment on or make changes to this bug.
Description
•