Bug 1343019 - Call set_window_parameters as appropriate. r=kats

MozReview-Commit-ID: 14f4vetRM98