gfx/webrender_bindings/WebRenderAPI.h
@@ -46,6 +46,7 @@ public:
 
   void GenerateFrame();
 
+  void SetWindowParameters(LayoutDeviceIntSize size);
   void SetRootDisplayList(gfx::Color aBgColor,
                           Epoch aEpoch,
                           LayerSize aViewportSize,
